fixes background overflow-x, setting it to hidden

--- a/client/styling/basicElements.scss
+++ b/client/styling/basicElements.scss
@@ -56,13 +56,13 @@ $yellow-golden-rgba: rgba(255, 238, 0, 0.8);
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 @mixin pattern-small-background-fixed($backgroundColor, $fileColor) {
   background: $backgroundColor url(
     "/assets/abstractions/" + $fileColor + "_tile.jpg") center/cover no-repeat fixed;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 .greenBackground {
@@ -421,6 +421,10 @@ body {
   left: 0;
   right: 0;
   z-index:-999;
+}
+
+.green-fixed-background, .blue-fixed-background, .red-fixed-background {
+  overflow-x: hidden;
 }
 
 .green-fixed-background::after {
